--- a/app/globals.css
+++ b/app/globals.css
@@ -14,9 +14,10 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: white;
-    --foreground: #ededed;
+    --background:#0d1117;
+    --foreground: #e6edf3;
   }
+
 }
 
 body {
